# hello-wch

./: Cargo.toml  README.md  riscv32ec-unknown-none-elf.json
.cargo/: config.toml
scripts/: build.bat  debug.bat  disassemble.bat  flash.bat  unbrick.bat
src/: main.rs
